--- a/views/home.pug
+++ b/views/home.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  h1 Hackathon Starter
-  p.lead A boilerplate for Node.js web applications.
+  h1 KIPP Texas Accounting
+  p.lead Applications built to make life easier for KIPP Texas
   hr
   .row
     .col-md-6
