--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,8 +1,8 @@
 footer
   .container.text-center
-    p.float-left © 2018 Company, Inc. All Rights Reserved
+    p.float-left © KIPP Texas
     ul.float-right.list-inline
       li.list-inline-item
-        a(href='https://github.com/sahat/hackathon-starter') GitHub Project
+        a(href='https://kipptexas.org/') KIPP Texas
       li.list-inline-item
-        a(href='https://github.com/sahat/hackathon-starter/issues') Issues
+        a(href='#') Issues
