--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,17 +1,13 @@
 @import "themes/default/variables";
-
 @import "node_modules/bootstrap/scss/bootstrap";
 @import "node_modules/@ladjs/bootstrap-social/bootstrap-social.scss";
 @import "node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
 @import "node_modules/@fortawesome/fontawesome-free/scss/fa-brands";
 @import "node_modules/@fortawesome/fontawesome-free/scss/fa-regular";
 @import "node_modules/@fortawesome/fontawesome-free/scss/fa-solid";
-
 @import "themes/default/default";
-
 // Scaffolding
 // -------------------------
-
 html {
   position: relative;
   min-height: 100%;
@@ -29,35 +25,39 @@ footer {
   width: 100%;
   height: 45px;
   line-height: 45px;
-
-  p, ul {
+  background-color: $footer-kipp-black;
+  p,
+  ul,
+  a {
     margin-bottom: 0;
+    color: white;
+  }
+  a:hover {
+    color: $kipp-green;
   }
 }
 
 // Input Fields
 // -------------------------
-
 textarea {
   resize: vertical;
 }
 
 // Navbar
 // -------------------------
-
 .navbar-nav img {
   width: 30px;
   min-height: 30px;
   margin: -15px 15px -15px;
 }
 
-.navbar{
+.navbar {
   padding: 0px;
   margin-bottom: 20px;
   display: block;
 }
 
-.navbar-brand{
+.navbar-brand {
   font-size: 18px;
   float: left;
   margin-left: 15px;
@@ -82,14 +82,12 @@ textarea {
 
 // Alerts
 // -------------------------
-
 .alert {
   margin-top: 20px;
 }
 
 // Thumbnails
 // -------------------------
-
 .thumbnail {
   padding: 0;
   border-radius: 0;
@@ -98,7 +96,6 @@ textarea {
 
 // Font Icons
 // -------------------------
-
 .fa {
   margin-right: 6px;
 }
