--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,4 +1,4 @@
-.navbar.navbar-light.fixed-top.navbar-expand-md
+.navbar.navbar-kipp.fixed-top.navbar-expand-md
   .container
     a.navbar-brand(href='/')
       | KIPP Texas
