--- a/views/codingsolution.pug
+++ b/views/codingsolution.pug
@@ -11,11 +11,11 @@ block content
         label(for="fund") Fund &nbsp
         select#fund(name="fund")
           each fund in funds
-            option(value=fund) #{fund}
+            option(value=fund selected = selection.fund == fund) #{fund}
         label(for="division") Division &nbsp
         select#division(name="division")
           each division in divisions
-            option(value=division) #{division}
+            option(value=division selected = selection.division == division) #{division}
         button(type="submit") Search
 
   #table-wrapper
